[project]
name = "np"
version = "0.2.3"
description = "last.fm-powered forum signature nanoservice"
authors = [
    {name = "Niko Shens", email = "voidlynx@icloud.com"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]

[project.urls]
source = "https://github.com/voidlynx/np"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
